@@ -1,3 +1,7 @@
+* October 5 2005, Arno Klenke
+
+Updated makefiles of the input and display drivers
+
 * October 4 2005, Arno Klenke
 
 Updated appserver:
